2004-04-06  Todd Berman  <tberman@sevenl.net>

	* Commands/MenuItemBuilders.cs: change to use alt instead of control
	for a more 'gnomey' feel.

2004-04-06  Todd Berman  <tberman@sevenl.net>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: update the menu
	after a context switch.
	* Gui/Components/SdMenu.cs: remove some junk.
	* Internal/Conditions/WorkbenchContextCondition.cs: new condition
	to allow conditionals on current context state.
	* Makefile.am: add above file to build

2004-04-06  Todd Berman  <tberman@sevenl.net>

	* Commands/ProjectBrowserCommands/CombineNodeCommands.cs: fix bug
	#56429.

2004-04-06  Todd Berman  <tberman@sevenl.net>

	* Gui/Workbench/DefaultWorkbench.cs: register gtype. add message about
	using proper ctor.
	* Gui/BrowserDisplayBinding/HtmlViewPane.cs: remove useless event
	box.

2004-04-04  John Luke  <jluke@cfl.rr.com>

	* Gui/BrowserDisplayBinding/HtmlViewPane.cs:
	* Gui/BrowserDisplayBinding/BrowserDisplayBinding.cs: small cleanups
	* Commands/HelpCommands.cs: make sure dispose is called on the
	tip of the day, about and viewgpl dialogs
	* Commands/ToolsCommands.cs: make sure dispose is called for the
	NewLayoutDialog
	* Gui/Dialogs/NewLayoutDialog.cs: implement IDisposable
	* Gui/Dialogs/ViewGplDialog.cs: implement IDisposable
	* Gui/Dialogs/TipOfTheDayDialog.cs: implement IDisposable

2004-04-04  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/AssemblyInformation.cs: workaround mono bug
	with Assembly.Load (byte[]). (this fixes radek's bug)
	* Gui/Dialogs/NewProjectDialog.cs: proper string

2004-04-04  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/DefaultParserService.cs: fix nullref

2004-04-04  John Luke  <jluke@cfl.rr.com>

	* Gui/Pads/FileScout.cs: use Gtk.Stock.Open for the icon
	* Gui/Dialogs/SharpDevelopAboutPanels.cs: call Path.GetFullPath
	on assembly location to get rid of '../AddIn/..' stuff
	send the text to the X clipboard also